force-app/main/default/objects/Trigger_Handler__mdt/fields/Bypass_Permission__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Permission__c</fullName>
    <inlineHelpText>Provide the name of custom permission for which this handler/helper will not run.</inlineHelpText>
    <label>Bypass Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>