force-app/main/default/objects/Trigger_Handler__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <inlineHelpText>The order in which the handler/helper class will be executed inside a transaction.</inlineHelpText>
    <label>Execution Order</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>