force-app/main/default/objects/Trigger_Handler__mdt/fields/Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Managed_By__c</fullName>
    <inlineHelpText>The team who manages this handler code.</inlineHelpText>
    <label>Managed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>