force-app/main/default/objects/Trigger_Handler__mdt/fields/Required_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission__c</fullName>
    <inlineHelpText>Permission for which this handler will run, If blank then this will run for all.</inlineHelpText>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>