force-app/main/default/objects/Trigger_Handler__mdt/fields/Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Setting__c</fullName>
    <inlineHelpText>Related object trigger setting.</inlineHelpText>
    <label>Trigger Setting</label>
    <referenceTo>Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Trigger Handlers</relationshipLabel>
    <relationshipName>Trigger_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>